Fix overflow-y mistake in wrapper

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -1567,8 +1567,8 @@ a.github-fork {
 		height: 100%;
 		top: 0;
 		left: 0;
-		overflow-y: scroll;
-		overflow-x: auto;
+		overflow-y: auto;
+		overflow-x: hidden;
 		word-wrap: break-word;
 		-webkit-overflow-scrolling: touch;
 		.custom-scroll(transparent, #EAEAEA);
